# TranslateAnywhere

./: .gitignore  README.md
App/TranslateAnywhere/: AccessibilityHelper.swift  AppDelegate.swift  ClipboardManager.swift  Contracts.swift  CoreBridge.h  HotkeyManager.swift  Info.plist  MenuManager.swift  ModelStoreManager.swift  SelectionCapture.swift  SettingsManager.swift  TranslateAnywhere-Bridging-Header.h  TranslationPanel.swift  TranslatorService.swift
App/TranslateAnywhere.xcodeproj/: project.pbxproj
Core/native/: ctranslate2_wrapper.cpp  ctranslate2_wrapper.h
Core/translator_core/: Cargo.toml  build.rs
Core/translator_core/include/: translator_core.h
Core/translator_core/src/: lib.rs  translator.rs
Core/translator_core/tests/: integration_test.rs
LICENSES/: APACHE-2.0.txt  CC-BY-4.0.txt  MIT.txt  THIRD-PARTY.md
manifests/: manifest-v1.json
scripts/: build_core_universal.sh  build_model_artifacts.sh  build_thirdparty_universal.sh  dev_setup.sh  fetch_and_convert_models.sh  package.sh  verify_model_artifacts.sh
