[package]
name = "translator_core"
version = "0.1.0"
edition = "2021"
description = "Offline translation engine for TranslateAnywhere (OPUS-MT via CTranslate2)"

[lib]
name = "translator_core"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
once_cell = "1.19"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
